# CloudHarvestCoreDataModel

./: .gitignore  CHANGELOG.md  README.md  __init__.py  functions.py  meta.json  meta.yaml  pyproject.toml  record.py  recordset.py  requirements.txt  setup.py
CloudHarvestCoreDataModel/: __register__.py  functions.py  meta.json  meta.py  record.py  tasks.py
cloud_harvest_core_data_model/: tasks.py
core-data-model/: matching.py  record.py  recordset.py
harvest/: functions.py  matching.py  record.py  recordset.py
recordsets/: record.py  recordset.py  tasks.py
tests/: functions.py  record.py  test_functions.py  test_matching.py  test_record.py  test_recordset.py  test_recordsets_functions.py  test_recordsets_matching.py  test_recordsets_record.py  test_recordsets_recordset.py  test_tasks_RecordsetTask.py
