[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CloudHarvestCoreDataModel"
version = "0.1.0"
description = "This is the Core Data Model for CloudHarvest."
authors = ["Cloud Harvest", "Fiona June Leathers"]
license = "CC Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[[tool.poetry.packages]]
include = "CloudHarvestCoreDataModel"

[tool.poetry.urls]
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel"
repository = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel"

[tool.poetry.dependencies]
python = ">=3.10"
Authlib = "*"
Flask = "*"
Jinja2 = "*"
PyYAML = "*"
flatten-json = "*"
pandas = "*"
pymongo = "*"
python-dateutil = "*"
rich-argparse = "*"
setuptools = "*"
CloudHarvestCoreTasks = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git" }

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
# Define your command-line scripts here