[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CloudHarvestCoreDataModel"
version = "0.1.0"
description = "This is the Core Data Model for CloudHarvest."
authors = ["Cloud Harvest", "Fiona June Leathers"]
license = "CC Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[[tool.poetry.packages]]
include = "CloudHarvestCoreDataModel"

[tool.poetry.urls]
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel"
repository = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel"

[tool.poetry.dependencies]
# Harvest Core Modules
CloudHarvestCoreTasks = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git" }

# Python dependencies
# The lower version of python satisfies the requirements of several dependencies
# Actual testing and development is done with Python 3.12
python = ">=3.7"
Authlib = "*"
Flask = "*"
Jinja2 = "*"
PyYAML = "*"
flatten-json = "*"
pandas = "*"
pymongo = "*"
python-dateutil = "*"
rich-argparse = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
# Define your command-line scripts here